<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="se.rymdo.studentfiket.MainActivity"
    android:background="@android:color/background_light">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/studentfiket"
            android:adjustViewBounds="true"
            android:layout_columnWeight="0"
            android:contentDescription="fiketLogo"
            android:visibility="visible"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Schedule this week"
                android:id="@+id/headerText"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="WEEK 10 - 2016-03-14 - 2016-03-19"
                android:id="@+id/weekDisplayText"
                android:layout_row="1"
                android:layout_column="0"
                android:textStyle="bold"
                android:layout_columnSpan="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/day1_text"
                android:id="@+id/day1Text"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="left"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="-"
                android:id="@+id/day1Status"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:singleLine="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/day2_text"
                android:id="@+id/day2Text"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_gravity="left"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="-"
                android:id="@+id/day2Status"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/day3_text"
                android:id="@+id/day3Text"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_gravity="left"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="-"
                android:id="@+id/day3Status"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/day4_text"
                android:id="@+id/day4Text"
                android:layout_row="5"
                android:layout_column="0"
                android:layout_gravity="left"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="-"
                android:id="@+id/day4Status"
                android:layout_row="5"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/day5_text"
                android:id="@+id/day5Text"
                android:layout_row="6"
                android:layout_column="0"
                android:layout_gravity="left"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="-"
                android:id="@+id/day5Status"
                android:layout_row="6"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/textView6"
                android:layout_row="7"
                android:layout_column="2" />

        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Long press the screen to refresh"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:linksClickable="true"
            android:autoLink="web"
            android:autoText="false"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/footer_text"
            android:id="@+id/footerText"
            android:layout_gravity="center_horizontal"
            android:linksClickable="true"
            android:autoLink="web"
            android:autoText="false" />
    </LinearLayout>

</RelativeLayout>
